# nvda-lstm-sentiment-thesis

./: .env.example  .gitignore  LICENSE  Makefile  README.md  project_structure_explanation.txt  pyproject.toml  requirements-reproducibility.txt  results_summary.txt
.github/workflows/: smoke-test.yml
archive/old_versions/: random_search_lstm_direction.py
artifacts/legacy/: README.md  legacy_moves.csv
artifacts/legacy/scripts/: fetch_amd_google_trends_pytrends.py  run_nvda_full_pipeline.sh  run_nvda_random_search_bestparams.sh
artifacts/models/: nvda_results_pipeline_summary.csv
artifacts/models/amd_random_search_reduced_features/: random_search_results.csv
artifacts/models/amd_walk_forward_direction/: amd_results_summary.txt  walk_forward_oos_predictions.csv  walk_forward_summary.json
artifacts/models/amd_walk_forward_random_search_bestparams/: walk_forward_oos_predictions.csv  walk_forward_summary.json
artifacts/models/amd_walk_forward_reduced_features/: walk_forward_oos_predictions.csv  walk_forward_summary.json
artifacts/models/nvda_lstm_feature_ablation/: lstm_feature_ablation_summary.csv  lstm_feature_ablation_summary.md  lstm_feature_ablation_summary_fixed.csv
artifacts/models/nvda_random_search_reduced_features/: random_search_results.csv
artifacts/models/nvda_walk_forward_full_features/: walk_forward_oos_predictions.csv  walk_forward_summary.json
artifacts/models/nvda_walk_forward_random_search_bestparams/: walk_forward_oos_predictions.csv  walk_forward_summary.json
artifacts/models/nvda_walk_forward_reduced_features/: walk_forward_oos_predictions.csv  walk_forward_summary.json
artifacts/models/training_models/: lstm_direction_classification.py  lstm_direction_classification_working_rocm.py  lstm_price_prediction.py  lstm_price_prediction_working_rocm.py  lstm_volatility_prediction.py  lstm_volatility_prediction_working_rocm.py
artifacts/reports/: amd_full_pipeline_summary.csv  final_results_manifest.md  nvda_full_pipeline_summary.csv
artifacts/reports/amd_baseline_models_linear_svm_ablations/: baseline_report_summary.json
artifacts/reports/amd_dataset_statistics/: correlation_matrix.csv  correlation_matrix.md  dataset_overview.csv  dataset_overview.md  descriptive_statistics.csv  descriptive_statistics.md  feature_group_summary.md  high_correlations.csv  high_correlations.md  missing_values.md  target_correlations.csv  target_correlations.md
artifacts/reports/amd_model_comparison/: model_comparison_table.csv  model_comparison_table.md  model_comparison_table.tex  model_comparison_table_raw.csv
artifacts/reports/nvda_baseline_models_linear_svm_ablations/: baseline_report_summary.json
artifacts/reports/nvda_dataset_statistics/: correlation_matrix.csv  correlation_matrix.md  dataset_overview.csv  dataset_overview.md  descriptive_statistics.csv  descriptive_statistics.md  feature_group_summary.csv  high_correlations.csv  high_correlations.md  missing_values.csv  target_correlations.csv  target_correlations.md
artifacts/reports/nvda_descriptives/: nvda_dataset_summary.md  nvda_descriptive_statistics.csv  nvda_high_correlation_pairs.csv  nvda_pearson_correlation_matrix.csv  nvda_spearman_correlation_matrix.csv  nvda_target_correlations.csv
artifacts/reports/nvda_model_comparison/: model_comparison_table.csv  model_comparison_table.md  model_comparison_table.tex  model_comparison_table_raw.csv
data/model_feed/: README.md
docs/: COMMANDS.md  DATA.md  DATASET_SCHEMA.md  DATA_ACQUISITION.md  EXPECTED_OUTPUTS.md  GPU_SAFETY.md  LEGACY_RESULTS.md  LSTM_ABLATION.md  Methedology_detailed.docx  PREPROCESSING.md  RAW_DATA_PIPELINE.md  REPRODUCIBILITY.md  RESULTS_PREPARATION.md  SCRIPT_INDEX.md
final_results/models/: logistic_reduced_t0525_oos_predictions.csv  lstm_direction_meta.json  lstm_direction_predictions.csv
final_results/models/random_search_base/: random_search_results.csv
final_results/models/random_search_direction/: random_search_results1.csv
final_results/models/random_search_direction_v2/: random_search_results.csv
final_results/models/random_search_test_10/: random_search_results.csv
final_results/models/test_run/: random_search_results.csv
final_results/models/walk_forward_base/: walk_forward_oos_predictions.csv  walk_forward_summary_base.json
final_results/models/walk_forward_base_bestparams/: walk_forward_oos_predictions.csv  walk_forward_summary_base_best.json
final_results/models/walk_forward_direction/: walk_forward_oos_predictions.csv  walk_forward_summary_features.json
final_results/models/walk_forward_direction_bestparams/: walk_forward_oos_predictions_bestparams.csv  walk_forward_summary_best_features.json
final_results/models/walk_forward_reduced_t0525/: walk_forward_oos_predictions.csv  walk_forward_summary.json
scripts/: make_nvda_descriptives.py  prepare_results_for_github.py  reproduce_windows.cmd  run_lstm_feature_ablation.sh  run_nvda_full_pipeline.sh  run_nvda_random_search_bestparams.sh  run_stock_full_pipeline.sh  run_stock_full_pipeline_safe.sh
src/thesis/: __init__.py  cli.py  config.py  io.py  logistic_regression_benchmark.py  paths.py
src/thesis/eval/: __init__.py  (+6 more)
tests/: test_imports.py  test_lstm_ablation_entrypoint.py
(+263 files in other folders)
