[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "thesis"
version = "0.1.0"
description = "A structured Python project for a Master's thesis on LSTM-based intraday stock forecasting"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]

# Core runtime deps used by the preprocessing + baseline LSTM pipeline
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",               # pandas + sklearn compatibility
  "scikit-learn>=1.4",         # StandardScaler, metrics
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-dotenv>=1.0",        # for local .env during dev/notebooks
  "requests>=2.32",
  "typer>=0.12",
  "rich>=13.7",                # nicer terminal output
  "pyarrow>=14.0.0",           # Parquet support
  "fastparquet>=2023.4.0",     # optional Parquet engine
  "scipy>=1.11",
  "matplotlib>=3.8",           # scientific figures and thesis-ready plots
  "jinja2>=3.1",               # required by pandas to_latex/styler output
]
# NOTE: PyTorch is intentionally NOT listed here to avoid accidentally installing the CPU wheel.
# Install ROCm builds separately:
#   pip uninstall -y torch torchvision torchaudio
#   pip install --index-url https://download.pytorch.org/whl/rocm6.0 torch torchvision torchaudio

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "black>=24.0",
  "ruff>=0.6.0",
  "mypy>=1.10",
  "types-requests",
  "mplfinance",
]
# If you want an extra for notebooks/plots, uncomment:
# nb = [
#   "ipykernel",
#   "matplotlib>=3.8",
#   "jupyterlab",
# ]

[project.scripts]
thesis = "thesis.cli:app"
thesis-scientific-outputs = "thesis.eval.make_scientific_outputs:main"
thesis-baselines = "thesis.eval.run_baseline_models:main"
thesis-baselines-linear-svm = "thesis.eval.run_baseline_models_linear_svm:main"

[project.urls]
Homepage = "https://example.com"
Repository = "https://example.com/repo"
Issues = "https://example.com/issues"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E","F","I","UP","B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
mypy_path = "src"
plugins = []  # add "pydantic.mypy" if you rely on pydantic v1-style plugin
