[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "thesis"
version = "0.1.0"
description = "A structured Python project for a Master's thesis on LSTM-based intraday stock forecasting"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Sherick Burggraaff" }]

# Core runtime dependencies for data preparation, evaluation, tables and figures.
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-dotenv>=1.0",
  "requests>=2.32",
  "typer>=0.12",
  "rich>=13.7",
  "pyarrow>=14.0.0",
  "fastparquet>=2023.4.0",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "jinja2>=3.1",
]
# TensorFlow is intentionally not listed as a hard dependency because installation
# differs by OS and hardware. Install it separately when reproducing the LSTM runs:
#   python -m pip install tensorflow
# For AMD ROCm/Linux setups, use the TensorFlow/ROCm installation recommended for
# the local system instead of the generic CPU package.

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "black>=24.0",
  "ruff>=0.6.0",
  "mypy>=1.10",
  "types-requests",
  "mplfinance",
]

[project.scripts]
thesis = "thesis.cli:app"
thesis-scientific-outputs = "thesis.eval.make_scientific_outputs:main"
thesis-baselines = "thesis.eval.run_baseline_models:main"
thesis-baselines-linear-svm = "thesis.eval.run_baseline_models_linear_svm:main"
thesis-model-comparison = "thesis.eval.make_model_comparison_table:main"
thesis-tune-lstm = "thesis.model_training.optimalisation.tune_lstm_direction:main"
thesis-walkforward-lstm = "thesis.model_training.optimalisation.evaluate_lstm_walk_forward:main"

[project.urls]
Repository = "https://github.com/Zammorak95/nvda-lstm-sentiment-thesis"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E","F","I","UP","B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
mypy_path = "src"
plugins = []
